--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,4 +1,8 @@
+@import "variables";
+
 body {
-  background-color: blue;
-  font-size: 20px;
+  background-color: $brand-color;
+  font-size: 18px;
 }
+
+@import "db_test";
