--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,8 +1,8 @@
-@import "variables";
+@import 'variables';
 
 body {
   background-color: $brand-color;
   font-size: 18px;
 }
 
-@import "db_test";
+@import 'db_test';
